Update to Play 2.4, with numerous changes to fix tests.
Changes to get subproject assets working not yet optimal.

 - Tweaks to SBT config and dependencies
 - Adapt numerous component classes for DI
 - Added Guice components module
 - Removed app GlobalSettings, replaced with `AppModule` and `ErrorHandler`
 - Remove permsize flag, which isn't needed on JDK8
 - Hacky, suboptimal fix for missing portal assets. Don't quite understand the changes yet.
 - Silence noisy logging classes in test, explore DB test fixes
 - Fix content type on API spec
 - Added a GuidesDAO through which guide-related data access happens.
 - More DB-related refactoring
 - Expunge more uses of the global, non-injected cache
 - Disentangle some app/state issues causing test failures and cache issues
 - Switch ITestApp to use an app loader and remove other app references
 - Fix a few more issues with the cache and 404 handling
 - Add a global error handler and fix WithBrowser tests
 - Fix profile image upload by adding boundary header, and add a size test
 - The max size is set via config and we test the error response.
 - Improve image size upload test.